Add GPIO reading for safty switch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(stepper_driver)
+set(CMAKE_CXX_STANDARD 11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -25,4 +26,5 @@ add_executable(stepper_driver src/stepper_driver.cpp)
 ## Specify libraries to link a library or executable target against
 target_link_libraries(stepper_driver
   ${catkin_LIBRARIES}
+  wiringPi
   )
